--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -6,7 +6,7 @@
 .Sidebar {
   background-color: #e0e4eb;
   border-right: 1px solid lightgray;
-  height: 100vh;
+  height: 100%;
   box-sizing: border-box;
   display: flex;
 }
@@ -27,6 +27,9 @@
   flex: 1;
   overflow: auto;
   padding-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
 }
 
 .Sidebar .top-bar {
@@ -96,14 +99,14 @@
   .SidebarContainer .overlay {
     position: absolute;
     width: 100%;
-    height: 120%;
+    height: 100%;
     z-index: 1;
     transition: 0.7s;
     pointer-events: none;
   }
 
   .Sidebar {
-    width: min(100%, 500px);
+    width: min(calc(100% - 32px), 500px);
     position: absolute;
     z-index: 2;
     transition: transform 0.5s;
